ansible-kub/roles/cart/files/cart/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: td-service
                port:
                  number: 80
